Fix broken banner on mobile devices
- Title banner would have overlapping borders on mobile
- Increased line height on very small devices to resolve this

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -106,6 +106,10 @@
   border-bottom: 2px solid rgb(217, 217, 217);
   border-top: 2px solid rgb(217, 217, 217);
   text-transform: uppercase;
+
+  @media (max-width: 460px) {
+    line-height: 45px;
+  }
 }
 
 .logo__image {
